# cadcad-sandbox

./: .dockerignore  .gitignore  Dockerfile  README.md  metadata.json  prompt.txt  pyproject.toml  requirements.txt  serve_model.py  test_outputs.py  test_sim.py
data/simulations/: custom_run-2025_03_03_14_59_52-results_kpis.json  custom_run-2025_03_03_15_04_18-results_kpis.json  custom_run-2025_03_03_15_05_47-results_kpis.json
examples/: github_install_example.py
model/: __init__.py  __main__.py  core_logic.py  experiment.py  helper.py  kpi.py  load_data.py  logic.py  params.py  structure.py  types.py
test_scripts/: run_integration_tests.sh
